--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -764,15 +764,15 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = None\n",
+    "num_epochs = 32\n",
     "# Batch Size\n",
-    "batch_size = None\n",
+    "batch_size = 32\n",
     "# RNN Size\n",
-    "rnn_size = None\n",
+    "rnn_size = 500\n",
     "# Sequence Length\n",
-    "seq_length = None\n",
+    "seq_length = 16\n",
     "# Learning Rate\n",
-    "learning_rate = None\n",
+    "learning_rate = 0.0\n",
     "# Show stats for every n number of batches\n",
     "show_every_n_batches = None\n",
     "\n",
