tune the parameter, remove keep_prob,change the activation function to None

--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -325,23 +325,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Program Files\\Anaconda3\\envs\\tensorflow\\lib\\site-packages\\ipykernel\\__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -366,7 +362,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Input\n",
     "Implement the `get_inputs()` function to create TF Placeholders for the Neural Network.  It should create the following placeholders:\n",
@@ -379,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -431,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -456,10 +455,10 @@
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
     "    keep_prob=1\n",
-    "    lstm_layers=10\n",
+    "    lstm_layers=5\n",
     "    lstm=tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
-    "    drop=tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
-    "    cell = tf.contrib.rnn.MultiRNNCell([drop] * lstm_layers)\n",
+    "#     drop=tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([lstm] * lstm_layers)\n",
     "\n",
     "    initial_state=cell.zero_state(batch_size,tf.float32)\n",
     "    initial_state=tf.identity(initial_state,name=\"initial_state\")\n",
@@ -485,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -538,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -579,7 +578,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -602,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -631,7 +632,7 @@
     "    embed_dim=rnn_size\n",
     "    embed_data=get_embed(input_data, vocab_size, embed_dim)\n",
     "    outputs,final_state=build_rnn(cell, embed_data)\n",
-    "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size, activation_fn=tf.sigmoid)\n",
+    "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size, activation_fn=None)\n",
     "    return logits, final_state\n",
     "\n",
     "\n",
@@ -679,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -755,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -764,17 +765,17 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 32\n",
+    "num_epochs = 200\n",
     "# Batch Size\n",
-    "batch_size = 32\n",
+    "batch_size = 256\n",
     "# RNN Size\n",
-    "rnn_size = 500\n",
+    "rnn_size = 10\n",
     "# Sequence Length\n",
-    "seq_length = 16\n",
+    "seq_length = 32\n",
     "# Learning Rate\n",
     "learning_rate = 0.01\n",
     "# Show stats for every n number of batches\n",
-    "show_every_n_batches = 70\n",
+    "show_every_n_batches = 50\n",
     "\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL THAT IS BELOW THIS LINE\n",
@@ -795,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -858,7 +859,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/134   train_loss = 8.822\n"
+      "Epoch   0 Batch    0/8   train_loss = 8.822\n",
+      "Epoch   6 Batch    2/8   train_loss = 5.811\n",
+      "Epoch  12 Batch    4/8   train_loss = 5.855\n",
+      "Epoch  18 Batch    6/8   train_loss = 5.854\n",
+      "Epoch  25 Batch    0/8   train_loss = 5.709\n",
+      "Epoch  31 Batch    2/8   train_loss = 5.772\n",
+      "Epoch  37 Batch    4/8   train_loss = 5.847\n"
      ]
     }
    ],
