--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -154,18 +154,19 @@
     "    :return: A tuple of dicts (vocab_to_int, int_to_vocab)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    char_list=[]\n",
-    "    for sentence in sentences:\n",
-    "        for word in sentence:\n",
-    "            for c in word:\n",
-    "                char_list.append(c)\n",
-    "    all_text=''.join(char_list)\n",
-    "    word_list=all_text.split()#why I got the wrong answer when I use wordlist instead of text..\n",
-    "    counts=Counter(text)\n",
-    "    vocab = sorted(counts, key=counts.get, reverse=True)\n",
-    "    vocab_to_int = {word: ii for ii, word in enumerate(vocab,1)}\n",
-    "    int_to_vocab={ii:word for ii, word in enumerate(vocab,1)}\n",
-    "\n",
+    "#     char_list=[]\n",
+    "#     for sentence in sentences:\n",
+    "#         for word in sentence:\n",
+    "#             for c in word:\n",
+    "#                 char_list.append(c)\n",
+    "#     all_text=''.join(char_list)\n",
+    "#     word_list=all_text.split()#why I got the wrong answer when I use wordlist instead of text..\n",
+    "#     counts=Counter(text)\n",
+    "#     vocab = sorted(counts, key=counts.get, reverse=True)\n",
+    "#     vocab_to_int = {word: ii for ii, word in enumerate(vocab,1)}\n",
+    "#     int_to_vocab={ii:word for ii, word in enumerate(vocab,1)}\n",
+    "    vocab_to_int = {vocab:i for i, vocab in enumerate(set(text))}\n",
+    "    int_to_vocab = {i:vocab for vocab, i in vocab_to_int.items()}\n",
     "\n",
     "    return vocab_to_int, int_to_vocab\n",
     "\n",
@@ -1141,7 +1142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
