--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -337,8 +337,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.0.0\n",
-      "Default GPU Device: /gpu:0\n"
+      "TensorFlow Version: 1.1.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Program Files\\Anaconda3\\envs\\dlnd\\lib\\site-packages\\ipykernel\\__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
      ]
     }
    ],
@@ -379,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -455,8 +461,8 @@
     "    :return: Tuple (cell, initialize state)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    keep_prob=1\n",
-    "    lstm_layers=5\n",
+    "#     keep_prob=1\n",
+    "    lstm_layers=2\n",
     "    lstm=tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
     "#     drop=tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
     "    cell = tf.contrib.rnn.MultiRNNCell([lstm] * lstm_layers)\n",
