--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -337,14 +337,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow Version: 1.1.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Program Files\\Anaconda3\\envs\\dlnd\\lib\\site-packages\\ipykernel\\__main__.py:14: UserWarning: No GPU found. Please use a GPU to train your neural network.\n"
+      "TensorFlow Version: 1.0.0\n",
+      "Default GPU Device: /gpu:0\n"
      ]
     }
    ],
@@ -385,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -437,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -491,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -544,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -610,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -636,7 +630,7 @@
     "    :return: Tuple (Logits, FinalState)\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    embed_dim=rnn_size\n",
+    "    embed_dim=15\n",
     "    embed_data=get_embed(input_data, vocab_size, embed_dim)\n",
     "    outputs,final_state=build_rnn(cell, embed_data)\n",
     "    logits = tf.contrib.layers.fully_connected(outputs, vocab_size, activation_fn=None)\n",
@@ -687,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -763,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -772,15 +766,15 @@
    "outputs": [],
    "source": [
     "# Number of Epochs\n",
-    "num_epochs = 200\n",
+    "num_epochs = 500\n",
     "# Batch Size\n",
-    "batch_size = 256\n",
+    "batch_size = 400\n",
     "# RNN Size\n",
-    "rnn_size = 10\n",
+    "rnn_size = 20\n",
     "# Sequence Length\n",
     "seq_length = 32\n",
     "# Learning Rate\n",
-    "learning_rate = 0.01\n",
+    "learning_rate = 0.001\n",
     "# Show stats for every n number of batches\n",
     "show_every_n_batches = 50\n",
     "\n",
@@ -803,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -855,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -866,13 +860,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch   0 Batch    0/8   train_loss = 8.822\n",
-      "Epoch   6 Batch    2/8   train_loss = 5.811\n",
-      "Epoch  12 Batch    4/8   train_loss = 5.855\n",
-      "Epoch  18 Batch    6/8   train_loss = 5.854\n",
-      "Epoch  25 Batch    0/8   train_loss = 5.709\n",
-      "Epoch  31 Batch    2/8   train_loss = 5.772\n",
-      "Epoch  37 Batch    4/8   train_loss = 5.847\n"
+      "Epoch   0 Batch    0/5   train_loss = 8.821\n",
+      "Epoch  10 Batch    0/5   train_loss = 7.699\n",
+      "Epoch  20 Batch    0/5   train_loss = 6.429\n",
+      "Epoch  30 Batch    0/5   train_loss = 5.988\n",
+      "Epoch  40 Batch    0/5   train_loss = 5.857\n",
+      "Epoch  50 Batch    0/5   train_loss = 5.817\n",
+      "Epoch  60 Batch    0/5   train_loss = 5.797\n",
+      "Epoch  70 Batch    0/5   train_loss = 5.784\n",
+      "Epoch  80 Batch    0/5   train_loss = 5.776\n",
+      "Epoch  90 Batch    0/5   train_loss = 5.770\n",
+      "Epoch 100 Batch    0/5   train_loss = 5.766\n",
+      "Epoch 110 Batch    0/5   train_loss = 5.763\n",
+      "Epoch 120 Batch    0/5   train_loss = 5.760\n",
+      "Epoch 130 Batch    0/5   train_loss = 5.758\n",
+      "Epoch 140 Batch    0/5   train_loss = 5.757\n",
+      "Epoch 150 Batch    0/5   train_loss = 5.755\n",
+      "Epoch 160 Batch    0/5   train_loss = 5.754\n",
+      "Epoch 170 Batch    0/5   train_loss = 5.753\n",
+      "Epoch 180 Batch    0/5   train_loss = 5.753\n",
+      "Epoch 190 Batch    0/5   train_loss = 5.752\n",
+      "Epoch 200 Batch    0/5   train_loss = 5.751\n",
+      "Epoch 210 Batch    0/5   train_loss = 5.750\n",
+      "Epoch 220 Batch    0/5   train_loss = 5.750\n",
+      "Epoch 230 Batch    0/5   train_loss = 5.749\n",
+      "Epoch 240 Batch    0/5   train_loss = 5.747\n",
+      "Epoch 250 Batch    0/5   train_loss = 5.745\n",
+      "Epoch 260 Batch    0/5   train_loss = 5.741\n",
+      "Epoch 270 Batch    0/5   train_loss = 5.727\n",
+      "Epoch 280 Batch    0/5   train_loss = 5.673\n",
+      "Epoch 290 Batch    0/5   train_loss = 5.614\n",
+      "Epoch 300 Batch    0/5   train_loss = 5.570\n",
+      "Epoch 310 Batch    0/5   train_loss = 5.531\n",
+      "Epoch 320 Batch    0/5   train_loss = 5.496\n",
+      "Epoch 330 Batch    0/5   train_loss = 5.461\n",
+      "Epoch 340 Batch    0/5   train_loss = 5.427\n",
+      "Epoch 350 Batch    0/5   train_loss = 5.394\n",
+      "Epoch 360 Batch    0/5   train_loss = 5.363\n",
+      "Epoch 370 Batch    0/5   train_loss = 5.333\n",
+      "Epoch 380 Batch    0/5   train_loss = 5.305\n",
+      "Epoch 390 Batch    0/5   train_loss = 5.277\n",
+      "Epoch 400 Batch    0/5   train_loss = 5.248\n",
+      "Epoch 410 Batch    0/5   train_loss = 5.217\n",
+      "Epoch 420 Batch    0/5   train_loss = 5.180\n",
+      "Epoch 430 Batch    0/5   train_loss = 5.142\n",
+      "Epoch 440 Batch    0/5   train_loss = 5.103\n",
+      "Epoch 450 Batch    0/5   train_loss = 5.065\n",
+      "Epoch 460 Batch    0/5   train_loss = 5.027\n",
+      "Epoch 470 Batch    0/5   train_loss = 4.988\n",
+      "Epoch 480 Batch    0/5   train_loss = 4.950\n",
+      "Epoch 490 Batch    0/5   train_loss = 4.912\n",
+      "Model Trained and Saved\n"
      ]
     }
    ],
@@ -903,7 +941,7 @@
     "                    batch_i,\n",
     "                    len(batches),\n",
     "                    train_loss))\n",
-    "\n",
+    "想·\n",
     "    # Save Model\n",
     "    saver = tf.train.Saver()\n",
     "    saver.save(sess, save_dir)\n",
@@ -1155,7 +1193,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
+  },
+  "widgets": {
+   "state": {},
+   "version": "1.1.2"
   }
  },
  "nbformat": 4,
